add timeout option to golangci-lint command

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh
   | sh -s -- -b $(go env GOPATH)/bin v1.23.8
 script:
-- "$(go env GOPATH)/bin/golangci-lint run"
+- "$(go env GOPATH)/bin/golangci-lint run --timeout 5m"
 # - TESTRUN=true go test -v -race ./...
 - docker build -f Dockerfile -t betorvs/secretreceiver:$COMMIT .
 env:
