--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Set up Go 1.15
-      uses: actions/setup-go@v1
+      uses: actions/checkout@v3
+    - name: Set up Go 1.19
+      uses: actions/setup-go@v3
       with:
-        go-version: 1.15
+        go-version: '>=1.19.0'
       id: go
     - name: Test
       run: TESTRUN=true go test -v ./...
