--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,3 +11,5 @@ jobs:
       uses: actions/checkout@v3
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v3
+      with:
+        args: --timeout=10m
