--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,6 +2,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: secretreceiver
+  annotations:
+    github.com/project-slug: betorvs/secretreceiver
 spec:
   type: service
   lifecycle: experimental
